Fixed codecoach-xp in profile information (xp points were overlapping with title)

--- a/src/app/components/coach/coach-information/coach-information.component.scss
+++ b/src/app/components/coach/coach-information/coach-information.component.scss
@@ -8,3 +8,9 @@
     //transform: translateX(-50%);
   }
 }
+
+@media (max-width: 500px) {
+  .coach-xp {
+    margin-top: 15px;
+  }
+}
